use loop for slides
remove slides depending on page id

--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,7 @@
 - user options page
 - Seperate CV from rest of site
 + namespace includes
-- use loop for slides instead of calling specific page IDs
++ use loop for slides instead of calling specific page IDs
 
 # MINIMISE DEPENDENCIES (IFICATION)
 
