--- a/todo.txt
+++ b/todo.txt
@@ -12,7 +12,7 @@
 # MINIMISE DEPENDENCIES (IFICATION)
 
 # PERFORMANCE DISUNDERENHANCEMENT
-- responsive images
++ responsive images
 
 # JS RECONFRABULATION
 
